bsdgames-nonfree (2.17-4) UNRELEASED; urgency=low

  * NOT YET RELEASED.
  * debian/compat: Advance to Debhelper 9.
  * debian/control:
    - Build-Depends: debhelper (>= 9), implying a new enough dpkg-dev.
  * debian/rules:
    - Minimize further by switching to override_dh_* style.

 -- Aaron M. Ucko <ucko@debian.org>  Wed, 27 Jun 2012 17:59:20 -0400

bsdgames-nonfree (2.17-3) unstable; urgency=low

  * Migrate from CDBS to Debhelper 7.
  * Explicitly note distinction between main and non-free in debian/copyright.
  * Declare compliance with Policy 3.8.0.

 -- Aaron M. Ucko <ucko@debian.org>  Sat, 14 Jun 2008 18:10:04 -0400

bsdgames-nonfree (2.17-2) unstable; urgency=low

  * Convert to cdbs and debhelper 6.
  * Note compliance with current policy (3.7.3).
  * Set XS-Autobuild: yes, as the license isn't too severely non-free.

 -- Aaron M. Ucko <ucko@debian.org>  Sat, 29 Mar 2008 19:51:53 -0400

bsdgames-nonfree (2.17-1) unstable; urgency=low

  * New upstream release.
  * debian/menu: Properly double-quote command.
  * debian/watch: Added, to help track future upstream versions.

 -- Aaron M. Ucko <ucko@debian.org>  Fri, 18 Feb 2005 22:09:47 -0500

bsdgames-nonfree (2.16-1) unstable; urgency=low

  * New upstream release.
  * debian/copyright: Update infrastructure copyright to cover 2004.
  * debian/docs: drop rogue.me (now covered by upstream build system).

 -- Aaron M. Ucko <ucko@debian.org>  Fri, 20 Feb 2004 23:24:21 -0500

bsdgames-nonfree (2.15-2) unstable; urgency=low

  * debian/postinst: Use POSIX-blessed chown syntax. (Closes: #229199)
  * debian/rules: Tell vrms (and other interested parties) that the
    license forbids commercial use.

 -- Aaron M. Ucko <ucko@debian.org>  Fri, 23 Jan 2004 19:16:31 -0500

bsdgames-nonfree (2.15-1) unstable; urgency=low

  * New upstream release.
  * debian/control: standards-version 3.6.1 (no changes needed).
  * debian/copyright: rework once more; should now contain all needed info.
