@@ -6,8 +6,9 @@ bsdgames-nonfree (2.17-4) UNRELEASED; urgency=low
     - Build-Depends: debhelper (>= 9), implying a new enough dpkg-dev.
   * debian/rules:
     - Minimize further by switching to override_dh_* style.
+    - Pass in dpkg's recommended flags, including full hardening flags.
 
- -- Aaron M. Ucko <ucko@debian.org>  Wed, 27 Jun 2012 17:59:20 -0400
+ -- Aaron M. Ucko <ucko@debian.org>  Wed, 27 Jun 2012 18:15:22 -0400
 
 bsdgames-nonfree (2.17-3) unstable; urgency=low
 
